feat: add formats to contents
- add content_formats table
- add endpoint to get formats list
- change queries to get file_contents
